--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <li class="hideOnMobile"><a href="#">Products</a></li>
         <li class="hideOnMobile"><a href="#">About</a></li>
         <li class="hideOnMobile"><a href="#">Form</a></li>
-        <li class="hideOnMobile" onclick="openSideBar()">
-          <a href="#">Login</a>
+        <li onclick="openSideBar()" id="open">
+          <a href="#"><i class="bx bx-menu"></i></a>
         </li>
         <li class="test">
           <a href="#"><i class="bx bx-menu" style="font-size: 26px"></i></a>
